fix(responsive): :iphone: fix issue with horizontal scroll

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -58,6 +58,7 @@
   }
 }
 
-html {
-  @apply overflow-x-hidden;
+html,
+body {
+  overflow-x: hidden;
 }
